--- a/package.json
+++ b/package.json
@@ -44,16 +44,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "crypto": "latest",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "firebase": "^12.3.0",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.6",
     "pg": "latest",
-    "pg-native": "latest",
     "react": "^18",
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
@@ -69,6 +68,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
+    "@types/pg": "^8.6.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8.5",
